Fixed restricted icon causing rows to be unaligned

--- a/src/main/webapp/bundles/health_v4/less/results/results.less
+++ b/src/main/webapp/bundles/health_v4/less/results/results.less
@@ -56,7 +56,7 @@
   color: #f6b14b;
   content: 'R';
   font-family: @font-family-theme-semibold;
-  font-size: 18px;
+  font-size: 15px;
   font-weight: bold;
 }
 
